# Rust-fullstack-webapp

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml
backend/: Cargo.toml
backend-api/: Cargo.toml
backend-api/src/: animal.rs  base.rs  lib.rs  litter.rs  phenotype.rs  search.rs
backend-api/src/request/: base.rs
backend-api/src/types/: error.rs
backend/csv-reader/: Cargo.toml
backend/csv-reader/src/: animals.rs  lib.rs
backend/db/: .gitignore  Cargo.toml  sqlx-data.json
backend/db/migrations/: 20221211154736_Init_DB.down.sql  20221211154736_Init_DB.up.sql  20221214191403_AddTestData.down.sql  20221214191403_AddTestData.up.sql  20230125180731_Make_Phenotype_Nullable.down.sql  20230125180731_Make_Phenotype_Nullable.up.sql
backend/db/src/: delete.rs  insert.rs  lib.rs  select.rs  update.rs
backend/plotter/: Cargo.toml
backend/plotter/src/: ancestry.rs  lib.rs
backend/src/: db.rs  main.rs  state.rs  web.rs
backend/src/api/: animal.rs  genes.rs  litter.rs  mod.rs  search.rs
backend/src/db/: animal.rs  insert.rs  litter.rs  mod.rs  select.rs
backend/types/: Cargo.toml
backend/types/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs  litter.rs  phenotype.rs
common/src/animal/: animal.rs  animal_data.rs  compressed.rs  full.rs  genes.rs  mod.rs  photo.rs
common/src/litter/: mod.rs
common/src/search/: mod.rs
csv-reader/: Cargo.toml
csv-reader/src/: animals.rs  lib.rs  phenotypes.rs  photos.rs
db/: Cargo.toml  Fenotypy-genotypy.csv
db/migrations/: 20221211154736_Init_DB.down.sql  20221211154736_Init_DB.up.sql  20221211161822_AddPhoto.down.sql  20221211161822_AddPhoto.up.sql  20221211164548_AddPhenotypes.down.sql  20221211164548_AddPhenotypes.up.sql  20221214191403_AddTestAnimal.down.sql  20221214191403_AddTestAnimal.up.sql  20221214191403_AddTestData.down.sql  20221214191403_AddTestData.up.sql
db/src/: insert.rs  lib.rs  select.rs
docker/backend/: Dockerfile
files/db/: baza-myszy.csv  nowa-baza-myszy.csv
frontend/: Cargo.toml  index.html
frontend-routing/: Cargo.toml
frontend-routing/src/: routes.rs
frontend/backend-api/: Cargo.toml
frontend/backend-api/src/: animal.rs  lib.rs  litter.rs
frontend/backend-api/src/request/: base.rs  delete.rs  get.rs  mod.rs  post.rs
frontend/backend-api/src/types/: mod.rs
frontend/css/: style.css
frontend/routing/: Cargo.toml
frontend/routing/src/: lib.rs  links.rs  routes.rs
frontend/routing/src/routes/: mod.rs
frontend/src/: main.rs
frontend/src/common/: input.rs  mod.rs  table.rs
frontend/src/page/: footer.rs  header.rs  mod.rs  navbar.rs  routes.rs
frontend/src/page/content/: animal.rs  animal_list.rs  error.rs  home.rs  litter_list.rs  litter_page.rs  mod.rs  not_found.rs  phenotypes.rs  search_results.rs
frontend/src/page/content/add/: animal.rs  litter.rs  mod.rs  phenotype.rs  routes.rs
frontend/src/page/content/list/: animal.rs  litter.rs  mod.rs  phenotype.rs
frontend/src/page/content/unique_id/: animal.rs
frontend/src/page/navbar/: mod.rs  search.rs
frontend/src/page/navigation/: links.rs  mod.rs  navbar.rs  paths.rs  search.rs
frontend/src/wasm/: mod.rs
frontend/wasm_utils/: Cargo.toml
frontend/wasm_utils/src/: lib.rs
utils/: build.sh  deploy.sh  run_db.sh  save.sh  send.sh  ssh.sh  zip.sh
