[package]
name = "backend-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
chrono = "0.4.23"
reqwest = { version = "0.11.13", features = ["json"] }
yew-router = "0.17"
anyhow = "1.0.66"