[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
common = { path = "../common" }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "postgres" ] }