[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"] }
common = { path = "../common" }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "postgres" ] }
openssl-sys = { version = "0.9.77", features = [ "vendored" ] }
dotenv_codegen = "0.15.0"
anyhow = "1.0.66"