[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"] }
common = { path = "../common" }
db = { path = "../db" }
anyhow = "1.0.66"
csv-reader = { path = "../csv-reader" }
frontend-routing = { path = "../frontend/routing" }