[package]
name = "csv-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
db = { path = "../db" }
anyhow = "1.0.66"
csv = "1.1"
serde = "1.0.148"
serde_json = "1.0.89"