[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common"}
backend-api = { path = "../backend-api"}
yew = "0.19"
wasm-bindgen = "0.2.83"
yew-router = "0.16"