[package]
name = "db"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "postgres", "offline", "json" ] }
openssl = { version = "0.10.35", features = ["vendored"] }
dotenv_codegen = "0.15.0"
anyhow = "1.0.66"
serde_json = "1.0.89"
types = { path = "../types" }