[package]
name = "frontend-routing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
anyhow = "1.0.66"
wasm-bindgen = "0.2"
yewdux = "0.9.0"
serde = "1.0.152"